<resources>

    <string name="app_version" translatable="false">v1.0</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">489582227919200</string>

    <!-- All -->
    <string name="all_right_drawer" translatable="false">Right drawer</string>
    <string name="all_overview">Overview</string>
    <string name="all_consuming_restful_web_service">Consuming Restful Web Service</string>
    <string name="all_facebook" translatable="false">Facebook</string>
    <string name="all_do_it_later" translatable="false">Do It Later</string>
    <string name="all_intent" translatable="false">Intent</string>
    <string name="all_coordinator_layout" translatable="false">CoordinatorLayout</string>
    <string name="all_movie_searcher" translatable="false">MovieSearcher</string>
    <string name="all_espresso_test" translatable="false">EspressoTest</string>
    <string name="all_mini_navigation_drawer" translatable="false">Mini Navigation Drawer</string>
    <string name="all_bottom_navigation_view" translatable="false">Bottom Navigation View</string>
    <string name="all_preview_camera" translatable="false">Preview Camera</string>
    <string name="all_running_man" translatable="false">Running Man</string>
    <string name="all_testing">Testing</string>
    <string name="all_music_player" translatable="false">Music Player</string>
    <string name="all_dl_sdk" translatable="false">DL SDK</string>
    <string name="all_firebase" translatable="false">Firebase</string>
    <string name="all_bitmap" translatable="false">Bitmap</string>
    <string name="all_load_image_from_internet" translatable="false">Load Image From Internet</string>
    <string name="all_normal">normal</string>
    <string name="all_later">Later</string>
    <string name="all_undo">UNDO</string>
    <string name="all_picasso" translatable="false">Picasso</string>
    <string name="all_lru" translatable="false">LRU</string>
    <string name="all_customized_view" translatable="false">Customized View</string>
    <string name="all_value" translatable="false">VALUE</string>
    <string name="all_0" translatable="false">0</string>
    <string name="all_file" translatable="false">File</string>
    <string name="all_input">Input</string>
    <string name="all_reset" translatable="false">Reset</string>
    <string name="all_update">Update</string>
    <string name="all_chat">Chat</string>
    <string name="all_send">Send</string>
    <string name="all_time" translatable="false">Time</string>
    <string name="all_animation" translatable="false">Animation</string>
    <string name="all_speech_recognition" translatable="false">Speech Recognition</string>
    <string name="all_strategy_pattern" translatable="false">Strategy Pattern</string>
    <string name="all_opencv" translatable="false">OpenCV</string>
    <string name="all_ndk" translatable="false">NDK</string>
    <string name="all_bubble_text" translatable="false">Bubble Text</string>
    <string name="all_instagram_api" translatable="false">Instagram API</string>
    <string name="all_setting">Settings</string>
    <string name="all_guide" translatable="false">Guide</string>
    <string name="all_rxjava" translatable="false">RxJava</string>
    <string name="all_installed_apps">Installed Apps</string>
    <string name="all_stack_overflow" translatable="false">Stack Overflow</string>
    <string name="all_count_down">Count Down</string>
    <string name="all_http" translatable="false">Http</string>
    <string name="all_exoplayer" translatable="false">ExoPlayer</string>
    <string name="all_dialog_trigger" translatable="false">Dialog Trigger</string>

    <!-- Left drawer -->
    <string name="left_drawer_header_sure_to_logout">Sure to logout?</string>

    <!-- Consuming restful web service -->
    <string name="consuming_restful_web_service_send_request">Send request</string>

    <!-- Facebook -->
    <string name="facebook_public_profile">Profile</string>
    <string name="facebook_user_friends">User friends</string>

    <!-- Do It Later -->
    <string name="do_it_later_no_task">No task</string>
    <string name="do_it_later_save_task_completed">Save task completed</string>
    <string name="do_it_later_save_task_failed">Save task failed</string>
    <string name="do_it_later_delete_task">Task has been deleted</string>

    <!-- Add task dialog -->
    <string name="add_task_dialog_title">Add Task</string>
    <string name="add_task_task_title_hint">Task title</string>
    <string name="add_task_task_description_hint">Task description</string>

    <!-- Intent -->
    <string name="intent_fire_component_intent" translatable="false">Fire component intent</string>
    <string name="intent_fire_action_intent" translatable="false">Fire action intent</string>
    <string name="intent_fire_text_share_intent" translatable="false">Fire text share intent</string>

    <!-- Receive intent -->
    <string name="receive_intent" translatable="false">Receive Intent</string>

    <!-- Music player -->
    <string name="music_player_no_music">Drag some musics to device</string>
    <string name="music_player_request_permission_explanation">If you want to listen to music on your phone, you need to grant permission.</string>
    <string name="music_player_request_reading_media_permission">Request Reading Media Permission</string>

    <!-- Firebase -->
    <string name="firebase_switch_subscribe_topic_test" translatable="false">Subscribe Topic Test</string>

    <!-- Bitmap -->
    <string name="bitmap_original_image" translatable="false">Original Image</string>
    <string name="bitmap_resized_image" translatable="false">Resized Image</string>

    <!-- Movie Searcher -->
    <string name="movie_searcher_search_movie">Please input a movie name...</string>

    <!-- Duration TextView -->
    <string name="duration_text_view_time" translatable="false">Duration: %s</string>

    <!-- File -->
    <string name="file_write_data">Write data</string>

    <!-- Testing -->
    <string name="testing_please_enter_testing_text" translatable="false">Please enter testing text</string>

    <!-- ValueBar -->
    <string name="value_bar_current_value" translatable="false">Current Value</string>

    <!-- ValueBar -->
    <string name="chat_chat_list_no_message">Start chatting!</string>

    <!-- Speech Recognition -->
    <string name="speech_recognition_please_speak">Please speak</string>

    <!-- Bottom Navigation View -->
    <string name="bottom_navigation_view_home">Home</string>
    <string name="bottom_navigation_view_search">Search</string>
    <string name="bottom_navigation_view_add">Add</string>
    <string name="bottom_navigation_view_notification">Notification</string>
    <string name="bottom_navigation_view_person">Person</string>

    <!-- Strategy Pattern -->
    <string name="strategy_pattern_eat">Eat</string>
    <string name="strategy_pattern_sleep">Sleep</string>

    <!-- Preview Camera -->
    <string name="preview_camera_request_camera_permission_explanation">If you want to preview the camera, you need to grant permission.</string>
    <string name="preview_camera_request_camera_permission">Request Camera Permission</string>

    <!-- Running Man -->
    <string name="running_man_keep_running">Keep running!</string>

    <!-- OpenCV -->
    <string name="opencv_restore_image">Restore Image</string>
    <string name="opencv_process_image">Process Image</string>

    <!-- Bubble Text -->
    <string name="bubble_text_show_bubble_text_view" translatable="false">Show BubbleTextView</string>
    <string name="bubble_text_send_message" translatable="false">Send Message</string>

    <!-- Instagram API -->
    <string name="instagram_api_client_id" translatable="false">3d183cf6ddc9418d8cee45bdca10e4e5</string>
    <string name="instagram_api_client_secret" translatable="false">034a046568a7456e9b30af0443ee3478</string>
    <string name="instagram_api_client_redirect_uri" translatable="false">http://localhost</string>
    <string name="instagram_api_login">Instagram Login</string>
    <string name="instagram_api_likes" translatable="false">Likes</string>

    <!-- Guide -->
    <string name="guide_highlight_button_text" translatable="false">Highlight Button</string>
    <string name="guide_call_guide_button_text" translatable="false">Call Guide</string>
    <string name="guide_i_know_button_text">I Know</string>
    <string name="guide_show_toast_button_text" translatable="false">Show Toast</string>

    <!-- Count Down -->
    <string name="count_down_start">Start to count down</string>

    <!-- Constraint Layout -->
    <string name="constraint_layout_a" translatable="false">A</string>
    <string name="constraint_layout_b" translatable="false">B</string>
    <string name="constraint_layout_c" translatable="false">C</string>

    <!-- ExoPlayer -->
    <string name="exoplayer_url_mp3" translatable="false">http://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="exoplayer_url_mp4" translatable="false">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
    <string name="exoplayer_url_dash" translatable="false"><![CDATA[http://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>

    <!-- Dialog Trigger -->
    <string name="button_dialog_trigger_fullscreen_dialog">Fullscreen Dialog</string>
    <string name="button_dialog_trigger_date_picker_dialog">DatePicker Dialog</string>

</resources>
