<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_right_drawer_coordinator_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_coordinator_layout"/>

    <Button
        android:id="@+id/button_right_drawer_movie_searcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_movie_searcher"/>

    <Button
        android:id="@+id/button_right_drawer_espresso_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_espresso_test"/>

    <Button
        android:id="@+id/button_right_drawer_mini_navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_mini_navigation_drawer"/>

    <Button
        android:id="@+id/button_right_drawer_bottom_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_bottom_navigation_view"/>

    <Button
        android:id="@+id/button_right_drawer_preview_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_preview_camera"/>

</LinearLayout>