<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_bottom_navigation_view_bottom_bar_home"
        android:title="@string/bottom_navigation_view_home"
        android:icon="@drawable/ic_bottom_navigation_view_bottom_bar_home" />

    <item
        android:id="@+id/menu_item_bottom_navigation_view_bottom_bar_search"
        android:title="@string/bottom_navigation_view_search"
        android:icon="@drawable/ic_bottom_navigation_view_bottom_bar_search" />

    <item
        android:id="@+id/menu_item_bottom_navigation_view_bottom_bar_add"
        android:title="@string/bottom_navigation_view_add"
        android:icon="@drawable/ic_bottom_navigation_view_bottom_bar_add" />

    <item
        android:id="@+id/menu_item_bottom_navigation_view_bottom_bar_notification"
        android:title="@string/bottom_navigation_view_notification"
        android:icon="@drawable/ic_bottom_navigation_view_bottom_bar_notification" />

    <item
        android:id="@+id/menu_item_bottom_navigation_view_bottom_bar_person"
        android:title="@string/bottom_navigation_view_person"
        android:icon="@drawable/ic_bottom_navigation_view_bottom_bar_person" />

</menu>