<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 若是想要在兩個item間加上divider，必須要分成兩個group，然後每個group都要設定自己的id -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_left_drawer_overview"
            android:title="@string/all_overview"
            android:checked="true"/>

        <item
            android:id="@+id/menu_item_left_drawer_consuming_restful_web_service"
            android:title="@string/all_consuming_restful_web_service" />

        <item
            android:id="@+id/menu_item_left_drawer_facebook"
            android:title="@string/all_facebook" />

        <item
            android:id="@+id/menu_item_left_drawer_do_it_later"
            android:title="@string/all_do_it_later" />

        <item
            android:id="@+id/menu_item_left_drawer_test"
            android:title="@string/all_test" />
    </group>

</menu>